--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -40,7 +40,7 @@
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
-	<false/>
+	<true/>
 </dict>
 <key>NSAppTransportSecurity</key>
 <dict>
